# newFlightCode

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md
.cache/clangd/index/: Arduino.h.C19364639614D02C.idx  ArduinoFiles.h.520D52E49559B522.idx  ArithmeticSequence.h.39FADCCF5CEFBAFE.idx  Array.h.D93E0338BE64E1C7.idx  ArrayBase.h.21E35D0DAFE8ADB6.idx  ArrayCwiseBinaryOps.h.446675DAD824C83E.idx  ArrayCwiseUnaryOps.h.4C51DE360F32D3D9.idx  ArrayWrapper.h.E38FC0277156703C.idx  Assign.h.D0AE9C91A157AF0F.idx  AssignEvaluator.h.243B16A2098EE9E6.idx  AssignmentFunctors.h.194F942260FC9858.idx  AudioStream.cpp.887FB72F4390DDB1.idx  AudioStream.h.E38C5AD58E50FF51.idx  BFloat16.h.77EF6E32B79EE84E.idx  BandMatrix.h.26739CA5388E41BF.idx  BinaryFunctors.h.9D2CF592A6B7DB4D.idx  BlasUtil.h.13C6EE4108F98A64.idx  Block.h.917B7EE738825F79.idx  BlockMethods.h.6AA502DCE8703E96.idx  BooleanRedux.h.328E5E86420B1E00.idx  CommaInitializer.h.78987D41F5B95562.idx  CommonCwiseBinaryOps.h.24BB922338D1EB10.idx  CommonCwiseUnaryOps.h.93DE7768652E4DD8.idx  CompileDateTime.h.131197F64C924D23.idx  ConditionEstimator.h.17F525E0D97FE872.idx  ConfigureVectorization.h.D38A3F76D82E675A.idx  ConjHelper.h.B26F1B2B764308A9.idx  Constants.h.0E0089871962FCFC.idx  Core.7B2C84AF2B9E01E8.idx  CoreEvaluators.h.EC5014BD780D5FD5.idx  CoreIterators.h.F39FD09F70300DCA.idx  CrashReport.cpp.422B3402E21471F2.idx  CrashReport.h.506BE73B9E924A50.idx  CwiseBinaryOp.h.D255374D842A5B7B.idx  CwiseNullaryOp.h.89C2B29D90070829.idx  CwiseTernaryOp.h.9D4DFDDBEEA07257.idx  CwiseUnaryOp.h.E412B707BCEBBBF8.idx  CwiseUnaryView.h.B920670E37745225.idx  DMAChannel.cpp.254E9020E1F5209A.idx  DMAChannel.h.E4A3545A19C26C8C.idx  (+603 more)
apps/: CMakeLists.txt  flightCode.cpp  flightMain.cpp  main.cpp
cmake/: mcu_upload.cmake
config/: config_default.h
include/: EKF.h  IMU.h  common.h  controller.h  datalogger.h  defaultParams.h  filter.h  flightRunner.h  madgwick.h  motors.h  navHandler.h  radio.h  telemetry.h  testing.h
include/mavlink/ardupilotmega/: ardupilotmega.h  version.h
include/mavlink/common/: version.h
include/mavlink/csAirLink/: csAirLink.h
include/mavlink/cubepilot/: cubepilot.h  mavlink.h  version.h
include/mavlink/icarous/: icarous.h  mavlink.h  version.h
include/mavlink/minimal/: mavlink.h  minimal.h  version.h
include/mavlink/standard/: version.h
include/mavlink/uAvionix/: version.h
lib/: CMakeLists.txt
lib/BFSChecksum/: CMakeLists.txt  checksum.h
lib/BFSMavlink/: CMakeLists.txt  heartbeat.cpp  mavlink.h  mission.h  parameter.h
lib/BFSUnits/: CMakeLists.txt
lib/BFSbmi088/: CMakeLists.txt
lib/DSMRX/: CMakeLists.txt
lib/EEPROM/: CMakeLists.txt
lib/MPU6050/: CMakeLists.txt
lib/MPU9250/: CMakeLists.txt
lib/PWMServo/: CMakeLists.txt
lib/SBUS/: CMakeLists.txt  SBUS.cpp
lib/SPI/: CMakeLists.txt
lib/STM32LIS3MDL/: CMakeLists.txt
lib/SdFat/: CMakeLists.txt
lib/TFMPlus/: CMakeLists.txt
lib/TeensyTimerTool/: CMakeLists.txt
lib/Wire/: CMakeLists.txt
lib/eigen/: CMakeLists.txt  eigen.h
lib/filters/: CMakeLists.txt  filter.cpp  filter.h
lib/mavlink/ardupilotmega/: mavlink.h
lib/mavlink/common/: common.h  mavlink.h
lib/mavlink/csAirLink/: mavlink.h  version.h
lib/mavlink/standard/: mavlink.h  standard.h
lib/mavlink/uAvionix/: mavlink.h  uAvionix.h
src/: CMakeLists.txt  EKF.h  FAKE_imu.cpp  FAKE_imu.h  IMU.cpp  IMU.h  UserDefines.h  common.h  commonDefinitions.h  controller.cpp  controller.h  datalogger.cpp  datalogger.h  defaultParams.h  filter.cpp  filter.h  flightRunner.cpp  madgwick.cpp  madgwick.h  main.cpp  mission.h  missionHandler.cpp  missionHandler.h  motors.cpp  motors.h  nav-functions.cpp  nav-functions.h  navHandler.cpp  navHandler.h  navSetpoints.cpp  navSetpoints.h  parameters.h  radio.cpp  radio.h  scalarMultiple.cpp  scalarMultiple.h  serialDebug.cpp  serialDebug.h  statFun.cpp  statFun.h  (+8 more)
src/ArduinoLibs/BFSMavlink/: heartbeat.cpp  heartbeat.h  mavlink.h  mission.cpp  telemetry.cpp  telemetry.h
src/ArduinoLibs/PWMServo/: PWMServo.cpp
src/controllers/: controller.cpp  controller.h  dcmPID.cpp  dcmPID.h  eulerPID.cpp  eulerPID.h
src/sensorFusion/: EKF.cpp  EKF.h  madgwick.cpp  madgwick.h
teensy4/: .HardwareSerial.h.swp  CMakeLists.txt
test/: radioTest.cpp
tools/: mktinyfat  precompile_helper  stdout_redirect  teensy_gateway  teensy_ports  teensy_post_compile  teensy_reboot  teensy_restart  teensy_secure  teensy_serialmon  teensy_size
tools/Windows_NT/: pre_uninstall.bat
tools/darwin/: precompile_helper  teensy_cleanup  teensy_ports  teensy_post_compile  teensy_reboot  teensy_secure  teensy_serialmon  teensy_size
tools/darwin/teensy.app/Contents/: Info.plist
tools/teensy.app/Contents/: Info.plist
