add_subdirectory(SPI)
add_subdirectory(SdFat)
add_subdirectory(Wire)
add_subdirectory(STM32LIS3MDL)
add_subdirectory(BFSbmi088)
add_subdirectory(BFSChecksum)
add_subdirectory(BFSMavlink)
add_subdirectory(BFSUnits)
add_subdirectory(DSMRX)
add_subdirectory(EEPROM)
add_subdirectory(eigen)
add_subdirectory(MPU6050)
add_subdirectory(MPU9250)
add_subdirectory(PWMServo)
add_subdirectory(SBUS)
add_subdirectory(TeensyTimerTool)
add_subdirectory(TFMPlus)
