add_library(TeensyLib
	analog.c
	AudioStream.cpp
	bootdata.c
	clockspeed.c
	CrashReport.cpp
	debugprintf.c
	delay.c
	digital.c
	DMAChannel.cpp
	eeprom.c
	EventResponder.cpp
	extmem.c
	fuse.c
	HardwareSerial.cpp
	HardwareSerial1.cpp
	HardwareSerial2.cpp
	HardwareSerial3.cpp
	HardwareSerial4.cpp
	HardwareSerial5.cpp
	HardwareSerial6.cpp
	HardwareSerial7.cpp
	HardwareSerial8.cpp
	interrupt.c
	IntervalTimer.cpp
	IPAddress.cpp
	keylayouts.c
	libc.c
	new.cpp
	nonstd.c
	Print.cpp
	pwm.c
	rtc.c
	serialEvent.cpp
	serialEvent1.cpp
	serialEvent2.cpp
	serialEvent3.cpp
	serialEvent4.cpp
	serialEvent5.cpp
	serialEvent6.cpp
	serialEvent7.cpp
	serialEvent8.cpp
	serialEventUSB1.cpp
	serialEventUSB2.cpp
	sm_alloc_valid.c
	sm_calloc.c
	sm_free.c
	sm_hash.c
	sm_malloc.c
	sm_malloc_stats.c
	sm_pool.c
	sm_realloc.c
	sm_realloc_i.c
	sm_realloc_move.c
	sm_szalloc.c
	sm_util.c
	sm_zalloc.c
	startup.c
	Stream.cpp
	tempmon.c
	Time.cpp
	Tone.cpp
	usb.c
	usb_audio.cpp
	usb_desc.c
	usb_flightsim.cpp
	usb_inst.cpp
	usb_joystick.c
	usb_keyboard.c
	usb_midi.c
	usb_mouse.c
	usb_mtp.c
	usb_rawhid.c
	usb_seremu.c
	usb_serial.c
	usb_serial2.c
	usb_serial3.c
	usb_touch.c
	WMath.cpp
	WString.cpp
	yield.cpp
)	

target_include_directories(TeensyLib PUBLIC 
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/avr"
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/debug"
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/util"
)
